tests/expectations/parser/program/bidi_comment_2_fail.out
Error [EPAR0370050]: Could not lex the following content: `/* next li`.

    --> test:1:1
     |
   1 | /* next line starts with 2069
     | ^^
Error [EPAR0370051]: Unicode bidi override code point encountered.
    --> test:4:1
     |
   4 | ⁩*/
     | ^^^
